test: 增加了其余各 Service 层的测试以及 AI Agent 的评测，包括意图识别、工具选择、参数提取、用户画像更新等测试代码